# codebase-rag

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  configuration.md  development.md  mcp-tools.md  performance.md  supported-stacks.md  troubleshooting.md
docs/clients/: claude-desktop.md  cursor.md  other-clients.md  vscode.md
src/codebase_rag/: __init__.py  cli.py  config.py
src/codebase_rag/indexer/: chunkers.py  core.py  detector.py  extractors.py
src/codebase_rag/search/: engine.py
src/codebase_rag/server/: mcp_server.py
src/codebase_rag/store/: lance.py
tests/integration/: test_indexer.py  test_mcp_server.py
tests/unit/: test_chunkers.py  test_detector.py  test_engine.py  test_extractors.py  test_lance_store.py
