[project]
name = "codebase-rag"
version = "0.1.0"
description = "Local RAG-powered MCP server for codebase-aware AI assistants. Index once, query from any MCP client."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Samson Rwakabuguli", email = "srwakabuguli@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["mcp", "rag", "codebase", "ai", "copilot", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0",
    "lancedb>=0.15",
    "ollama>=0.4",
    "click>=8.0",
    "pyyaml>=6.0",
    "pyarrow>=15.0",
]

[project.scripts]
codebase-rag = "codebase_rag.cli:main"

[project.urls]
Homepage = "https://github.com/afromanSR/codebase-rag"
Repository = "https://github.com/afromanSR/codebase-rag"
Issues = "https://github.com/afromanSR/codebase-rag/issues"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
